--- a/src/templates/main-table.html
+++ b/src/templates/main-table.html
@@ -1,3 +1,17 @@
+<div class="topEditBox-list">
+        <button type="submit" class="btn ng-binding" ng-click="smartClick(singleSelection())" title="{{'open' | translate}}">
+            <i class="glyphicon glyphicon-folder-open"></i>
+        </button>
+        <button type="submit" class="btn ng-binding" ng-click="modal('rename')" title="{{'rename' | translate}}">
+            <i class="glyphicon glyphicon-edit"></i>
+        </button>
+        <button type="submit" class="btn ng-binding" ng-click="modalWithPathSelector('move')" title="{{'move' | translate}}">
+            <i class="glyphicon glyphicon-arrow-right"></i>
+        </button>
+        <button type="submit" class="btn ng-binding" ng-click="modal('remove')" title="{{'remove' | translate}}">
+            <i class="glyphicon glyphicon-trash"></i>
+        </button>
+    </div>
 <table class="table mb0 table-files noselect">
     <thead>
         <tr>
@@ -19,12 +33,12 @@
                     <span class="sortorder" ng-show="predicate[1] === 'model.date'" ng-class="{reverse:reverse}"></span>
                 </a>
             </th>
-            <th class="hidden-sm hidden-xs" ng-hide="config.hidePermissions">
+            <!--<th class="hidden-sm hidden-xs" ng-hide="config.hidePermissions">
                 <a href="" ng-click="order('model.permissions')">
                     {{"permissions" | translate}}
                     <span class="sortorder" ng-show="predicate[1] === 'model.permissions'" ng-class="{reverse:reverse}"></span>
                 </a>
-            </th>
+            </th>-->
         </tr>
     </thead>
     <tbody class="file-item">
@@ -59,9 +73,9 @@
             <td class="hidden-sm hidden-xs" ng-hide="config.hideDate">
                 {{item.model.date | formatDate }}
             </td>
-            <td class="hidden-sm hidden-xs" ng-hide="config.hidePermissions">
+            <!--<td class="hidden-sm hidden-xs" ng-hide="config.hidePermissions">
                 {{item.model.perms.toCode(item.model.type === 'dir'?'d':'-')}}
-            </td>
+            </td>-->
         </tr>
     </tbody>
 </table>
