--- a/src/css/main.css
+++ b/src/css/main.css
@@ -190,7 +190,7 @@ textarea.code {
   box-shadow: inset 1px 1px 0 rgba(0, 0, 0, .1), inset -1px -1px 0 rgba(0, 0, 0, .07);*/
   width: 8px;
   height: 10px;
-  background-color: #fff;
+  /*background-color: #fff;*/
   border-radius: 10px;
 }
 
@@ -201,10 +201,10 @@ textarea.code {
 ::-webkit-scrollbar-thumb {
     min-height: 0.8em;
     min-width: 0.8em;
-    background-color: rgba(121, 121, 121, 0.11);
-    box-shadow: inset 1px 1px 0 rgba(0, 0, 0, .1), inset -1px -1px 0 rgba(0, 0, 0, .07);
+    background-color: rgba(62, 62, 62, 0.11);
+    /*box-shadow: inset 1px 1px 0 rgba(0, 0, 0, .1), inset -1px -1px 0 rgba(0, 0, 0, .07);*/
     border-radius: 22px;
-    border: 1px solid #dadada;
+    border: 1px solid #e4e4e4;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -449,4 +449,33 @@ table th > a:focus {
   width: 18px;
   height: 18px;
   line-height: 100%;
+}
+
+
+.topEditBox-icon{
+    background: #fafafa;
+    margin-left: -10px;
+    border-bottom: 1px solid #eee;
+    padding: 10px;
+    margin-top: -10px;
+}
+
+.topEditBox-list{
+    background: #fafafa;
+    border-bottom: 1px solid #eee;
+    padding: 10px;
+}
+
+.topEditBox-list button,.topEditBox-icon button{
+    margin: 5px;
+    background: white;
+}
+
+.topEditBox-list button:hover,.topEditBox-icon button:hover{
+    background: #f1f1f1;
+}
+
+.navbar {
+    -webkit-box-shadow: 0 0px 0px rgba(0,0,0,0.3);
+    box-shadow: 0 0px 0px rgba(0,0,0,0.3);
 }
