--- a/src/templates/modals.html
+++ b/src/templates/modals.html
@@ -371,10 +371,10 @@
   </div>
 </div>
 
-<div class="modal animated fadeIn" id="userProfile">
+<div class="modal animated fadeIn" id="changePassword">
   <div class="modal-dialog">
     <div class="modal-content">
-        <form ng-submit="getUserProfile()">
+        <form ng-submit="changePassword()">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">
                   <span aria-hidden="true">&times;</span>
@@ -383,25 +383,44 @@
               <h4 class="modal-title">{{'Profile' | translate}}</h4>
             </div>
             <div class="modal-body" style="height: 300px;">
-              <div class="form-control">
                   <label class="radio">{{'old_passwd' | translate}}</label>
-                  <input class="form-control" ng-model="singleSelection().tempModel.oldPasswd" autofocus="autofocus" type="password>
-              </div>
-              <div class="form-control">
+                  <input class="form-control" ng-model="temp.tempModel.oldPasswd" autofocus="autofocus" type="password">
                   <label class="radio">{{'new_passwd' | translate}}</label>
-                  <input class="form-control" ng-model="singleSelection().tempModel.newPasswd" autofocus="autofocus" type="password>
-              </div>
-              <div class="form-control">
+                  <input class="form-control" ng-model="temp.tempModel.newPasswd" autofocus="autofocus" type="password">
                   <label class="radio">{{'confirm_passwd' | translate}}</label>
-                  <input class="form-control" ng-model="singleSelection().tempModel.confirmPasswd" autofocus="autofocus" type="password>
-              </div>
+                  <input class="form-control" ng-model="temp.tempModel.confirmPasswd" autofocus="autofocus" type="password">
               <div ng-include data-src="'error-bar'" class="clearfix"></div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal" ng-disabled="apiMiddleware.apiHandler.inprocess">{{"cancel" | translate}}</button>
-              <button type="submit" class="btn btn-primary" ng-disabled="apiMiddleware.apiHandler.inprocess">{{'create' | translate}}</button>
+              <button type="submit" class="btn btn-primary" ng-disabled="apiMiddleware.apiHandler.inprocess">{{"submit" | translate}}</button>
             </div>
         </form>
+    </div>
+  </div>
+</div>
+
+<div class="modal animated fadeIn" id="logout">
+  <div class="modal-dialog">
+    <div class="modal-content">
+    <form ng-submit="logout()">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">
+            <span aria-hidden="true">&times;</span>
+            <span class="sr-only">{{"close" | translate}}</span>
+        </button>
+        <h4 class="modal-title">{{"confirm" | translate}}</h4>
+      </div>
+      <div class="modal-body">
+        {{'sure_to_logout' | translate}} <span ng-include data-src="'selected-files-msg'"></span>
+
+        <div ng-include data-src="'error-bar'" class="clearfix"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal" ng-disabled="apiMiddleware.apiHandler.inprocess">{{"cancel" | translate}}</button>
+        <button type="submit" class="btn btn-primary" ng-disabled="apiMiddleware.apiHandler.inprocess" autofocus="autofocus">{{"remove" | translate}}</button>
+      </div>
+      </form>
     </div>
   </div>
 </div>
