--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-9 col-md-10 hidden-xs">
+            <div class="col-sm-8 col-md-9 hidden-xs">
                 <div ng-show="!config.breadcrumb">
-                    <a class="navbar-brand hidden-xs ng-binding" href="">angular-{{"Zaxabox" | translate}}</a>
+                    <a class="navbar-brand hidden-xs ng-binding" href="">angular-{{"Zexabox" | translate}}</a>
                 </div>
                 <div ng-include="config.tplPath + '/current-folder-breadcrumb.html'" ng-show="config.breadcrumb">
                 </div>
             </div>
-            <div class="col-sm-3 col-md-2">
+            <div class="col-sm-4 col-md-3">
                 <div class="navbar-collapse">
                     <div class="navbar-form navbar-right text-right">
                         <div class="pull-left visible-xs" ng-if="fileNavigator.currentPath.length">
@@ -24,9 +24,9 @@
                             </button>
 
                             <ul class="dropdown-menu scrollable-menu animated fast fadeIn pull-right" role="menu" aria-labelledby="more">
-                                <li role="presentation" ng-click="modal('userProfile')">
+                                <li role="presentation" ng-click="modal('changePassword')">
                                     <a href="" role="menuitem" tabindex="-1">
-                                        <i class="glyphicon glyphicon-user"></i> {{"Profile" | translate}}
+                                        <i class="glyphicon glyphicon-lock"></i> {{"Profile" | translate}}
                                     </a>
                                 </li>
                                 <li role="presentation" ng-click="$parent.logout()">
@@ -61,9 +61,9 @@
 
                             <ul class="dropdown-menu scrollable-menu animated fast fadeIn pull-right" role="menu" aria-labelledby="dropDownMenuLang">
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('en')">English</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('zh_tw')">正體中文</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('zh_tw')">繁體中文</a></li>
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('zh_cn')">简体中文</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('es')">Español</a></li>
+                                <!--<li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('es')">Español</a></li>
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('nl')">Nederlands</a></li>
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('pt')">Portugues</a></li>
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('fr')">Français</a></li>
@@ -75,7 +75,7 @@
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('ua')">український</a></li>
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('tr')">Türkçe</a></li>
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('fa')">فارسی</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('pl')">Polski</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="" ng-click="changeLanguage('pl')">Polski</a></li>-->
                             </ul>
                         </div>
 
