--- a/src/templates/main-table.html
+++ b/src/templates/main-table.html
@@ -11,6 +11,9 @@
         <button type="submit" class="btn ng-binding" ng-click="modal('remove')" title="{{'remove' | translate}}">
             <i class="glyphicon glyphicon-trash"></i>
         </button>
+        <button type="submit" class="btn ng-binding" ng-click="modal('share')" title="{{'share' | translate}}">
+            <i class="glyphicon glyphicon-share"></i>
+        </button>
     </div>
 <table class="table mb0 table-files noselect">
     <thead>
