--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -1,10 +1,12 @@
 <ul class="nav nav-sidebar file-tree-root">
     <li ng-repeat="item in fileNavigator.history" ng-include="'folder-branch-item'" ng-class="{'active': item.name == fileNavigator.currentPath.join('/')}"></li>
+
+    <li ng-include="'folder-branch-item-share'"></li>
+    <li ng-include="'folder-branch-item-trash'"></li>
 </ul>
 
 <script type="text/ng-template" id="folder-branch-item">
     <a href="" ng-click="fileNavigator.folderClick($event,item.item)" class="animated fast fadeInDown">
-
         <span class="point">
             <i class="glyphicon glyphicon-chevron-down" ng-show="isInThisPath(item.name)"></i>
             <i class="glyphicon glyphicon-chevron-right" ng-show="!isInThisPath(item.name)"></i>
@@ -12,9 +14,38 @@
 
         <i class="glyphicon glyphicon-folder-open mr2" ng-show="isInThisPath(item.name)"></i>
         <i class="glyphicon glyphicon-folder-close mr2" ng-show="!isInThisPath(item.name)"></i>
-        {{ (item.name.split('/').pop() || fileNavigator.getBasePath().join('/') || '/') | strLimit : 30 }}
+        {{ (item.name.split('/').pop() || fileNavigator.getBasePath().join('/') || 'fileManagement' | translate ) | strLimit : 30 }}
     </a>
     <ul class="nav nav-sidebar">
         <li ng-repeat="item in item.nodes" ng-include="'folder-branch-item'" ng-class="{'active': item.name == fileNavigator.currentPath.join('/')}"></li>
     </ul>
-</script>·
+</script>
+
+<script type="text/ng-template" id="folder-branch-item-share">
+    <a href="" ng-click="" class="animated fast fadeInDown">
+        <span class="point">
+            <i class="glyphicon glyphicon-chevron-down" ng-show="isInThisPath(item.name)"></i>
+            <i class="glyphicon glyphicon-chevron-right" ng-show="!isInThisPath(item.name)"></i>
+        </span>
+        <i class="glyphicon glyphicon-share mr2"></i>
+        {{'sharedResourceManagement' | translate}}
+    </a>
+    <!-- <ul class="nav nav-sidebar">
+        <li ng-repeat="item in item.nodes" ng-include="'folder-branch-item'" ng-class="{'active': item.name == fileNavigator.currentPath.join('/')}"></li>
+    </ul> -->
+</script>
+
+<script type="text/ng-template" id="folder-branch-item-trash">
+    <a href="" ng-click="" class="animated fast fadeInDown">
+        <span class="point">
+            <i class="glyphicon glyphicon-chevron-down" ng-show="isInThisPath(item.name)"></i>
+            <i class="glyphicon glyphicon-chevron-right" ng-show="!isInThisPath(item.name)"></i>
+        </span>
+
+        <i class="glyphicon glyphicon-trash mr2"></i>
+        {{'recoveryStation' | translate}}
+    </a>
+    <!-- <ul class="nav nav-sidebar">
+        <li ng-repeat="item in item.nodes" ng-include="'folder-branch-item'" ng-class="{'active': item.name == fileNavigator.currentPath.join('/')}"></li>
+    </ul> -->
+</script>
